<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mercha">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Merchandise"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:padding="10dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kami Menjual Merchandise berupa Sweater yang dapat anda beli dengan cara mengisi form di bawah ini"
            android:textSize="20dp"
            android:textAlignment="center"
            android:padding="10dp">
        </TextView>
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:src="@drawable/merch"
            android:padding="10dp">
        </ImageView>
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
        <TextView
            android:text="@string/quan"
            style="@style/HeaderTextStyle">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>
        <EditText
            android:id="@+id/ukuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ukuran"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tulis jumlah sweater setiap ukuran contohnya sweater ukuran s=1,m=2">
        </TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />



    </LinearLayout>
</ScrollView>